GH-152 feat!: introduce new dependency injection system and rework plugin core
Thanks to @EternalCodeTeam