@@ -1,8 +1,8 @@
 package com.github.imdmk.playtime.platform.adventure;
 
-import com.github.imdmk.playtime.shared.validate.Validator;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextReplacementConfig;
+import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Comparator;
@@ -10,68 +10,38 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-/**
- * Utility for applying {@link AdventurePlaceholders} to {@link Component} trees or plain strings.
- * <p>Stateless and thread-safe.</p>
- */
 public final class AdventureFormatter {
 
     private AdventureFormatter() {
         throw new UnsupportedOperationException("This is a utility class and cannot be instantiated");
     }
 
-    /**
-     * Applies placeholders to a plain string and returns a formatted {@link Component}.
-     *
-     * @param input plain text input
-     * @param placeholders placeholders to apply
-     * @return formatted component
-     */
-    public static @NotNull Component format(@NotNull String input, @NotNull AdventurePlaceholders placeholders) {
-        Validator.notNull(input, "input");
+    public static Component format(@NotNull String input, @NotNull AdventurePlaceholders placeholders) {
         return format(AdventureComponents.text(input), placeholders);
     }
 
-    /**
-     * Applies placeholders to each {@link Component} in a list.
-     *
-     * @param components list of components
-     * @param placeholders placeholders to apply
-     * @return formatted components
-     */
-    public static @NotNull List<Component> format(@NotNull List<Component> components, @NotNull AdventurePlaceholders placeholders) {
-        Validator.notNull(components, "components");
+    public static List<Component> format(@NotNull List<Component> components, @NotNull AdventurePlaceholders placeholders) {
         return components.stream()
                 .map(component -> format(component, placeholders))
                 .collect(Collectors.toList());
     }
 
-    /**
-     * Applies placeholders to a single {@link Component}.
-     *
-     * @param input component to format
-     * @param placeholders placeholders to apply
-     * @return formatted component
-     */
-    public static @NotNull Component format(@NotNull Component input, @NotNull AdventurePlaceholders placeholders) {
-        Validator.notNull(input, "input");
-        Validator.notNull(placeholders, "placeholders");
-
+    public static Component format(@NotNull Component input, @NotNull AdventurePlaceholders placeholders) {
         if (placeholders.isEmpty()) {
             return input;
         }
 
         // Sort keys by descending length to avoid substring overlap
-        List<Map.Entry<String, Component>> ordered = placeholders.asMap().entrySet().stream()
+        final var ordered = placeholders.asMap().entrySet().stream()
                 .sorted(Comparator.<Map.Entry<String, Component>>comparingInt(e -> e.getKey().length()).reversed())
-                .collect(Collectors.toList());
+                .toList();
 
         Component out = input;
-        for (final Map.Entry<String, Component> e : ordered) {
-            var key = e.getKey();
-            var replacement = e.getValue();
+        for (final var entry : ordered) {
+            final String key = entry.getKey();
+            final Component replacement = entry.getValue();
 
-            var config = TextReplacementConfig.builder()
+            final TextReplacementConfig config = TextReplacementConfig.builder()
                     .matchLiteral(key)
                     .replacement(replacement)
                     .build();
@@ -81,4 +51,5 @@ public final class AdventureFormatter {
 
         return out;
     }
+
 }
